[project]
name = "sndtools"
dynamic = ["version"]
description = "Statistical Nuclear Data Tools"
authors = [{name = "Vetle Wegner Ingeberg", email = "vetlewi@fys.uio.no"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6"
]

[project.urls]
Homepage = "https://github.com/vetlewi/SNDTools"
Repository = "https://github.com/vetlewi/SNDTools"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [
    "sndtools"
]

[tool.setuptools_scm]
